editando principal view

--- a/views/principal.html
+++ b/views/principal.html
@@ -48,7 +48,7 @@
           </div>
           <div class="row">
             <div class="col s5 offset-s1">
-              <input type="file" id="files">
+              <input id="files" type="file">
             </div>
             <div class="col s5">
               <button type="button" name="button" id="btn-send-post">Publicar</button>
